0.8

[*] salt for crypt is changed to empty string

[+] write caching
[+] read caching